apps/vaultwarden/base/resources/peerauthentication.yaml
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: vaultwarden
spec:
  mtls:
    mode: STRICT
