apps/vaultwarden/base/resources/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    secret.reloader.stakater.com/reload: vaultwarden,vaultwarden-tls
  labels:
    app.kubernetes.io/component: vaultwarden
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/name: vaultwarden
  name: vaultwarden
  namespace: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: vaultwarden
      app.kubernetes.io/instance: vaultwarden
      app.kubernetes.io/name: vaultwarden
  serviceName: vaultwarden-headless
  template:
    metadata:
      labels:
        app.kubernetes.io/component: vaultwarden
        app.kubernetes.io/instance: vaultwarden
        app.kubernetes.io/name: vaultwarden
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: vaultwarden
            - secretRef:
                name: vaultwarden
          image: ghcr.io/dani-garcia/vaultwarden:1.35.2-alpine
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /alive
              port: https
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: vaultwarden
          ports:
            - containerPort: 8080
              name: https
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /alive
              port: https
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /data/tmp
              name: data-tmp
            - mountPath: /tls
              name: tls
              readOnly: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: vaultwarden
      volumes:
        - name: data
          hostPath:
            path: /srv/vaultwarden
            type: Directory
        - name: data-tmp
          emptyDir:
            medium: Memory
            # sizeLimit: ...
        - name: tls
          secret:
            secretName: vaultwarden-tls
