apps/vaultwarden/base/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/name: vaultwarden
  name: vaultwarden
spec:
  parentRefs:
    - kind: Gateway
      name: traefik
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: vaultwarden
          port: 80
