apps/vaultwarden/base/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/name: vaultwarden
  name: vaultwarden
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: vaultwarden
                port:
                  name: http
            path: /
            pathType: Prefix
